@@ -60,11 +60,11 @@
 			a : this,
 			p : 0,
 			hasNext : function() {
-				return this.p < this.a.length;
+				return __this__.p < __this__.a.length;
 			},
 			next : function() {
-				var i = this.a.__a[this.p];
-				this.p += 1;
+				var i = __this__.a.__a[__this__.p];
+				__this__.p += 1;
 				return i;
 			}
 		};
